# EClab

./: .gitignore  CoulombicEfficiency.ipynb  EClabfiles.ipynb  LinearAndCyclingVoltammetry.ipynb  README.md  notebook.ipynb  pyproject.toml  requirements.txt  test.html
Data old/: ZnSO4_molal1_day3_02_GCPL_C03.mpr  ZnSO4_molal1_day3_03_PEIS_C03.mgr  ZnSO4_molal1_day3_03_PEIS_C03.mpr
Data old/Cycling/: ZnSO4(3m)_0,1mA_01_PEIS_C08.mpl  ZnSO4(3m)_0,1mA_02_GCPL_C08.mgr  ZnSO4(3m)_0,1mA_03_PEIS_C08.mgr  ZnSO4(3m)_0,1mA_03_PEIS_C08.mpl  ZnSO4(3m)_0,1mA_D104_C08.sta  ZnSO4(3m)_0,1mA_day2_01_PEIS_C05.mpl  ZnSO4(3m)_0,1mA_day2_02_GCPL_C05.mgr  ZnSO4(3m)_0,1mA_day2_03_PEIS_C05.mgr  ZnTFSI-G4(1-4)_0,1mA_01_PEIS_C06.mgr  ZnTFSI-G4(1-4)_0,1mA_01_PEIS_C06.mpr  ZnTFSI-G4(1-4)_0,1mA_02_GCPL_C06.mgr  ZnTFSI-G4(1-4)_0,1mA_day2.mps  ZnTFSI-G4(1-4)_0,1mA_day2_02_GCPL_C06.mpl  ZnTFSI-G4(1-4)_0,1mA_day2_03_PEIS_C06.mpl
Data old/Zn project/: ZnSO4-Molal-1-EL-cell_01_LSV_C16.mpr
Data old/ZnSO4/: ZnSO4(3m)_0,1mA_day5.mps  ZnSO4-Molal-1-Coincell-50mikroL-Zn-Steel.mps  ZnSO4-Molal-1-EL-cell-90mikroL-Reduction.mps  ZnSO4-Molal-1-EL-cell-90mikroL-Reduction_C16.mpr  ZnSO4-Molal-1-EL-cell-90mikroL-Zn-CarbonGlass.mps  ZnSO4-Molal-1-EL-cell.mps  ZnSO4-Molal-1-Polished-50mikroL-bothsidesofsep.mps  ZnSO4-Molal-2-EL-cell-90mikroL-Reduction.mps  ZnSO4-Molal-2-EL-cell-90mikroL-Reduction_C16.mpr  ZnSO4-Molal-2-EL-cell-90mikroL-Zn-CarbonGlass.mps  (+19 more)
src/: CoulombicEfficiency.ipynb  PEIS.ipynb  coulombic_efficiency.py  cycling.py  linear_and_cyclic_voltammetry.py  peis.py  readmps.py  utils.py
(+300 files in other folders)
